--- a/sidebar.html
+++ b/sidebar.html
@@ -176,10 +176,10 @@
       <a href="about.html" class="about-btn"
         ><i class="fas fa-user"></i> <span>About</span></a
       >
-      <a href="#" class="skills-btn"
+      <a href="projects.html" class="skills-btn"
         ><i class="fas fa-project-diagram"></i> <span>Projects</span></a
       >
-      <a href="#" class="services-btn"
+      <a href="services.html" class="services-btn"
         ><i class="fas fa-cogs"></i> <span>Services</span></a
       >
       <a href="contactme.html" class="contact-btn"
